backend_deployment.yaml
# Updated emessenger Backend Deployment YAML

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: emessenger-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emessenger-backend
  template:
    metadata:
      labels:
        name: emessenger-backend
        app: emessenger-backend
        version: 1.0.0
    spec:
      nodeName: mannit-4gb-nbg1-1
      containers:
      - args:
        - sh
        - -c
        - cd /usr/src/app && npm install && npm run elastic
        image: node:alpine
        name: emessenger-backend
        ports:
        - containerPort: 8001
          name: emessengerb-1
        resources:
          requests:
            cpu: 300m
            memory: 200Mi
        volumeMounts:
        - mountPath: /usr/src/app
          name: emessenger-backend-pv-claim
        workingDir: /usr/src/app
      restartPolicy: Always
      volumes:
      - name: emessenger-backend-pv-claim
        persistentVolumeClaim:
          claimName: emessenger-backend-pv-claim


---
# Updated emessenger Backend Service YAML

apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: emessenger-backend
spec:
  type: NodePort
  ports:
  - name: "emessengerport"
    port: 8001
    targetPort: 8001
  selector:
    app: emessenger-backend
