backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emessenger-backend-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: emessenger-api.mannit.co  # Replace with your actual domain for emessenger
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: emessenger-backend
            port:
              number: 8001
